tests/baselines/reference/anonymousModules.errors.txt
anonymousModules.ts(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
anonymousModules.ts(1,8): error TS1437: Namespace must be given a name.
anonymousModules.ts(4,2): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
anonymousModules.ts(4,9): error TS1437: Namespace must be given a name.
anonymousModules.ts(10,2): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
anonymousModules.ts(10,9): error TS1437: Namespace must be given a name.


==== anonymousModules.ts (6 errors) ====
    module {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
           ~
!!! error TS1437: Namespace must be given a name.
    	export var foo = 1;
    
    	module {
    	~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    	       ~
!!! error TS1437: Namespace must be given a name.
    		export var bar = 1;
    	}
    
    	var bar = 2;
    
    	module {
    	~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    	       ~
!!! error TS1437: Namespace must be given a name.
    		var x = bar;
    	}
    }